########################################################################################################################
# XuBooth 1.6
########################################################################################################################
#  2015-09-03	introduced PictureStrip mode
#			- capture $n images and place them at given coordinates within a template file
#			- configuration as usual via config file
#  2015-08-15	Tools.sh
#			- new tool to check a config's overlay settings using the benchmark image files
#		improved variable handling in OTA (index.php, 404.php and styles.css.php)
#		stylized OTA management interface (finally looking good)
#  2015-06-25	THIS IS A HUGE UPDATE
#		intermission image ("waiting for camera") is customizable for e.g. branding purposes
#		configurable zoom setting for slideshow (max = max zoom / fill = fill whole screen)
#		UI improvements
#			- wired/wireless network devices can be selected upon start (no need for static config files anymore)
#			- existing photo directories can be selected for re-use
#		changes in "The Booth Brothers" branding
#			- updated "waiting for camera" animation graphic
#			- updated ads
#		OTA
#			- management portal (who is online, download statistics, status of contest mode)
#			- improved wifi speed
#			- more visible download image (depending on the photo barely visible before)
#		introduced Contest Mode
#			- randomized placement of stickers to signalize winning
#			- integration into OTA management portal
#		introduced Tools.sh
#			- quick selection of tools to make a photoboother's life easier
#			- ListWifiChannels - lists wifi channels that are used in the surrounding area
#			- Benchmark - quick way to assess and compare a machine's performance (very unscientific!)
#			- RepairXuBooth - if XuBooth got killed this will try to restore modified system files
#  2015-05-30	improved OTA management portal